; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_color.c_colorchain.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_color.c_colorchain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.colormap = type { %struct.colordesc* }
%struct.colordesc = type { %struct.arc* }
%struct.arc = type { i64, %struct.arc*, %struct.arc* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.colormap*, %struct.arc*)* @colorchain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @colorchain(%struct.colormap* %0, %struct.arc* %1) #0 {
  %3 = alloca %struct.colormap*, align 8
  %4 = alloca %struct.arc*, align 8
  %5 = alloca %struct.colordesc*, align 8
  store %struct.colormap* %0, %struct.colormap** %3, align 8
  store %struct.arc* %1, %struct.arc** %4, align 8
  %6 = load %struct.colormap*, %struct.colormap** %3, align 8
  %7 = getelementptr inbounds %struct.colormap, %struct.colormap* %6, i32 0, i32 0
  %8 = load %struct.colordesc*, %struct.colordesc** %7, align 8
  %9 = load %struct.arc*, %struct.arc** %4, align 8
  %10 = getelementptr inbounds %struct.arc, %struct.arc* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = getelementptr inbounds %struct.colordesc, %struct.colordesc* %8, i64 %11
  store %struct.colordesc* %12, %struct.colordesc** %5, align 8
  %13 = load %struct.colordesc*, %struct.colordesc** %5, align 8
  %14 = getelementptr inbounds %struct.colordesc, %struct.colordesc* %13, i32 0, i32 0
  %15 = load %struct.arc*, %struct.arc** %14, align 8
  %16 = icmp ne %struct.arc* %15, null
  br i1 %16, label %17, label %23

17:                                               ; preds = %2
  %18 = load %struct.arc*, %struct.arc** %4, align 8
  %19 = load %struct.colordesc*, %struct.colordesc** %5, align 8
  %20 = getelementptr inbounds %struct.colordesc, %struct.colordesc* %19, i32 0, i32 0
  %21 = load %struct.arc*, %struct.arc** %20, align 8
  %22 = getelementptr inbounds %struct.arc, %struct.arc* %21, i32 0, i32 1
  store %struct.arc* %18, %struct.arc** %22, align 8
  br label %23

23:                                               ; preds = %17, %2
  %24 = load %struct.colordesc*, %struct.colordesc** %5, align 8
  %25 = getelementptr inbounds %struct.colordesc, %struct.colordesc* %24, i32 0, i32 0
  %26 = load %struct.arc*, %struct.arc** %25, align 8
  %27 = load %struct.arc*, %struct.arc** %4, align 8
  %28 = getelementptr inbounds %struct.arc, %struct.arc* %27, i32 0, i32 2
  store %struct.arc* %26, %struct.arc** %28, align 8
  %29 = load %struct.arc*, %struct.arc** %4, align 8
  %30 = getelementptr inbounds %struct.arc, %struct.arc* %29, i32 0, i32 1
  store %struct.arc* null, %struct.arc** %30, align 8
  %31 = load %struct.arc*, %struct.arc** %4, align 8
  %32 = load %struct.colordesc*, %struct.colordesc** %5, align 8
  %33 = getelementptr inbounds %struct.colordesc, %struct.colordesc* %32, i32 0, i32 0
  store %struct.arc* %31, %struct.arc** %33, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
